refactor: deleted space

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html lang="en">
 <head>
-<title> Page title </title>   
+<title>Page_title</title>
 </head>
-<body text="1">
-<h1> Heading </h1>
-<p> Paragraph </p>
+<body link="1">
+<h1>Heading</h1>
+<p>Paragraph</p>
 </body>
 </html>
