--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
+<meta charset="UTF-8">
 <title>Page_title</title>
+<link rel="stylesheet" href="/style.css">
 </head>
 <body>
-<h1>Heading</h1>
-<p>Paragraph</p>
+
 </body>
 </html>
